# Créer un executable à partir de fichiers sources
add_executable(halley tp2.cxx)
add_executable(q3tp2 q3tp2.cxx)
add_executable(testpoint test_point.cxx)
add_executable(testUnivers tp3.cxx)
add_executable(q1tp4 q1tp4.cxx)
add_executable(testcell test_struct_cellule.cxx)
add_executable(testuniv test_univers.cxx)
add_executable(halley2 test_stormer_univers.cxx)
add_executable(collision colision.cxx)
add_executable(rebond rebond.cxx)
target_link_libraries(halley simulation)
target_link_libraries(q3tp2 simulation)
target_link_libraries(testpoint simulation)
target_link_libraries(testUnivers simulation)
target_link_libraries(q1tp4 simulation)
target_link_libraries(testcell simulation)
target_link_libraries(testuniv simulation)
target_link_libraries(halley2 simulation)
target_link_libraries(collision simulation)
target_link_libraries(rebond simulation)